# FasterTransformer

./: CMakeLists.txt
docker/: build_dev.sh  run_dev.sh
examples/utils/: prepare_vit_weights.py
src/fastertransformer/models/vit/: ViTLayerWeight.h  ViTWeight.h
src/fastertransformer/triton_backend/: CMakeLists.txt  transformer_triton_backend.hpp
src/fastertransformer/triton_backend/vit/: CMakeLists.txt  ViTTritonModel.cc  ViTTritonModel.h  ViTTritonModelInstance.cc  ViTTritonModelInstance.h
src/fastertransformer/utils/: Tensor.cc
